{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 12,
  "lineage": "6af56970-cfb3-13c4-0d08-93773903eaee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d30e700785a8472",
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:elastic-ip/eipalloc-03d30e700785a8472",
            "domain": "vpc",
            "id": "eipalloc-03d30e700785a8472",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-98-32.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.98.32",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:internet-gateway/igw-0037751467ee7142c",
            "id": "igw-0037751467ee7142c",
            "owner_id": "252955337664",
            "tags": {
              "Name": "ig-miniproject"
            },
            "tags_all": {
              "Name": "ig-miniproject"
            },
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgtw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d30e700785a8472",
            "association_id": "eipassoc-06ef5225871477cb7",
            "connectivity_type": "public",
            "id": "nat-0095e1224d6a4bd7e",
            "network_interface_id": "eni-04d7e780febc6cfc0",
            "private_ip": "10.0.1.69",
            "public_ip": "3.1.98.32",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01fbb5475ede19bc9",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:route-table/rtb-071dfffb32eaee5fe",
            "id": "rtb-071dfffb32eaee5fe",
            "owner_id": "252955337664",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0037751467ee7142c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vm_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:route-table/rtb-0c198c13610d9d772",
            "id": "rtb-0c198c13610d9d772",
            "owner_id": "252955337664",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0095e1224d6a4bd7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vm-internet-rt"
            },
            "tags_all": {
              "Name": "vm-internet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NATgtw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ffffb0d65adf213",
            "route_table_id": "rtb-071dfffb32eaee5fe",
            "subnet_id": "subnet-01fbb5475ede19bc9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pub_route",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vm_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d1e320b3543034c",
            "route_table_id": "rtb-0c198c13610d9d772",
            "subnet_id": "subnet-0e0d512c6adb668ac"
          },
          "dependencies": [
            "aws_eip.natip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.NATgtw",
            "aws_route_table.vm_internet_route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:security-group/sg-0f42d340a745500e6",
            "description": "Allow Internal",
            "egress": [],
            "id": "sg-0f42d340a745500e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "Allow Internal",
            "name_prefix": "",
            "owner_id": "252955337664",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:subnet/subnet-0e0d512c6adb668ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0d512c6adb668ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252955337664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-subnet"
            },
            "tags_all": {
              "Name": "Private-subnet"
            },
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:subnet/subnet-01fbb5475ede19bc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fbb5475ede19bc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252955337664",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0b992410979a2bd99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:252955337664:vpc/vpc-0b992410979a2bd99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bacfc011f27090a3",
            "default_route_table_id": "rtb-0ee1102d6bc1be963",
            "default_security_group_id": "sg-0f0261eb20dac2f22",
            "dhcp_options_id": "dopt-0cbda2372afc13cde",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b992410979a2bd99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee1102d6bc1be963",
            "owner_id": "252955337664",
            "tags": {
              "Name": "vpc-miniproject"
            },
            "tags_all": {
              "Name": "vpc-miniproject"
            }
          }
        }
      ]
    }
  ]
}